# e-csvt

./: .env  .gitattributes  .gitignore  CLAUDE.md  README.md  analyze_clustering_performance.py  apply_transformations.py  clustering.md  ers.py  ers_all_names.py  join_csv_files.py  main.py  pyproject.toml  transformations.py
.claude/: settings.local.json
configs/: n1.yml  nexp.yml  nexp2.yml
docs/: blocking.md  clustering_performance_guide.md
examples/configs/: n2.yml
examples/experiments/: hybrid.py  nicknames.py
experiments/: basic.py  basic2.py
src/ecsvt/: __init__.py  apply_transformations.py  ers.py
src/ecsvt/cli/: __init__.py  ers_all_names.py  main.py  semantic_similarity_repl.py
